# ARM_RPI_Test

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: aarch64-none-linux-gnu.cmake
inc/: app_main.h  app_s2lp.h  app_spi.h
src/: app_main.c  app_s2lp.c  app_spi.c
